engine,ops: structured JSON from the engine and refined auto-connections output
we also print dangling plugs now

also switch to recommend installing from be

--- a/README
+++ b/README
@@ -8,7 +8,7 @@ metadata and snap-declaration content.
 Installation
 =============
 
-snap install --edge ifacetool
+snap install --beta ifacetool
 
 To operate ifacetool needs to retrieve information from the store, it
 can do so using `snapcraft login` credentials. These can be made
@@ -63,9 +63,17 @@ auto-connections using the input from the corresponding snap directories (see fe
   target-snap, assuming the presence of the listed context snaps, and prints
   the auto-connecting slot/plug pairs
 
-NOTE: the output of this command needs refining, also it will need to
-produce more output optionally to help debug situations where an
-expected auto-connection is not established
+The output report has two corresponding parts:
+
+* installation report
+* auto-connections reported with lines of the form:
+
+  other-snap:plug < target-snap-slot
+  other-snap:slot > target-snap-plug
+  : target-snap-plug    for any plug that is still left unconnected
+
+NOTE: this will need to produce more output optionally to help debug situations
+where an expected auto-connection is not established
 
 --store and --model values are used when processing on-store/on-model/on-brand
 constraints in the rules.
