--- a/README
+++ b/README
@@ -86,6 +86,11 @@ constraints in the rules.
 Changelog
 ==========
 
+0.5.1
+------
+
+ * switch to craft-store 2.3.0 to enable final snapcraft v7 exported auth
+
 0.5
 ----
 
